refactor: whitespace